--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -11,7 +11,7 @@ on:
     - '.github/workflows/docker-push.yml'
 jobs:
   docker:
-    runs-on: ubuntu-21.04
+    runs-on: ubuntu-latest
     steps:
       -
         name: Set up QEMU
