--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -37,7 +37,7 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/simplewhale:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/MegaSdk:3.9.2
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
