--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -36,6 +36,7 @@ jobs:
         with:
           context: ./
           file: ./Dockerfile
+          no-cache: true
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/mega-sdk:latest
 
