--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -1,82 +1,28 @@
+name: Docker
 
-  build-api-image:
+on:
+  push:
+    paths:
+      - "Dockerfile"
+  workflow_dispatch:
+
+jobs:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: brutewooorse
-          password: ${{ secrets.GH_PACKAGES_TOKEN }}
+      - uses: actions/checkout@main
 
-      - name: Setup Docker Buildx
-        id: setup_buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Cache Docker Layers
-        id: cache_docker_layers
-        uses: actions/cache@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1.10.0
         with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-tgbot-api-${{ github.sha }}
-          restore-keys: ${{ runner.os }}-buildx-tgbot-api-
+          username: brutewoorse
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build-Push Docker Image
-        id: docker_build_push
-        uses: docker/build-push-action@v2
+      - name: Build and publish to Docker Hub
+        uses: docker/build-push-action@v2.6.1
         with:
-          builder: ${{ steps.setup_buildx.outputs.name }}
-          target: api
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new
+          context: .
+          file: ./Dockerfile
+          platforms: linux/amd64
           push: true
-          tags: ghcr.io/brutewoorse/tgbot:api
-
-      - name: Docker Image Digest
-        run: echo ${{ steps.docker_build_push.outputs.digest }}
-
-      - name: Move Docker Layer Cache
-        run: |
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
-
-  build-mega-image:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: brutewooorse
-          password: ${{ secrets.GH_PACKAGES_TOKEN }}
-
-      - name: Setup Docker Buildx
-        id: setup_buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Cache Docker Layers
-        id: cache_docker_layers
-        uses: actions/cache@v2
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-mega-sdk-${{ github.sha }}
-          restore-keys: ${{ runner.os }}-buildx-mega-sdk-
-
-      - name: Build-Push Docker Image
-        id: docker_build_push
-        uses: docker/build-push-action@v2
-        with:
-          builder: ${{ steps.setup_buildx.outputs.name }}
-          target: mega
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new
-          push: true
-          tags: ghcr.io/brutewoorse/mega-sdk:mega
-
-      - name: Docker Image Digest
-        run: echo ${{ steps.docker_build_push.outputs.digest }}
-
-      - name: Move Docker Layer Cache
-        run: |
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+          tags: brutewoorse/mega-sdk-python:latest
