--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -4,6 +4,11 @@ on:
   push:
     paths:
       - "Dockerfile"
+      paths-ignore:
+      - "Dockerfile"
+      - "README.md"
+      - ".gihub/workflow/*"
+
   workflow_dispatch:
 
 jobs:
