--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -7,7 +7,7 @@ on:
       paths-ignore:
       - "Dockerfile"
       - "README.md"
-      - ".gihub/workflow/*"
+      - ".gihub/workflows/*"
 
   workflow_dispatch:
 
